--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -6,21 +6,29 @@
 </head>
 <body>
 <h2>안녕 템플릿!</h2>
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Question List</title>
+</head>
+<body>
 <table>
- <thead>
+    <thead>
     <tr>
         <th>제목</th>
         <th>작성일시</th>
     </tr>
- </thead>
+    </thead>
     <tbody>
     <tr th:each="question : ${questionList}">
-        <td th:text="${question.subject}"></td>
+        <td>
+            <a th:href="@{/question/detail/{id}(id=${question.id})}"
+               th:text="${question.subject}"></a>
+        </td>
         <td th:text="${question.createDate}"></td>
     </tr>
     </tbody>
-
 </table>
 </body>
 </html>
